CDSTH-545 Update pipeline and install script

--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -62,8 +62,8 @@ jobs:
       - name: Install Requirements (test-harness)
         run: |
           cd test-harness
-          git fetch  --all
-          git checkout CDSTH-545-Create-testing-input-pipeline-PUML-to-test-data 
+          git fetch --all --tags
+          git checkout tags/v1.0.0 -b latest 
           pip install -r requirements.txt
           pip install .
           cd ..
