CDSTH-547 Updated github workflow

--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -6,6 +6,9 @@ on:
       - synchronize
     branches:
       'main'
+  push:
+    branches:
+      - 'CDSTH-547-Create-bayesian-analysis-pipeline'
 jobs:
   sast:
     uses: SmartDCSITlimited/actions-store/.github/workflows/SAST.yml@main
@@ -34,11 +37,24 @@ jobs:
           ssh-key: ${{ secrets.GH_CDS_TEST_HARNESS_GITHUB_WORKFLOW_KEY }}
           path: test-harness
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      # - name: Setup Python
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: '3.11'
+      #     cache: 'pip'
+      
+      - name: Setup-conda
+        uses: actions/checkout@v3
+        uses: s-weigand/setup-conda@v1
         with:
-          python-version: '3.11'
-          cache: 'pip'
+          update-conda: true
+          python-version: 3.11
+          conda-channels: conda-forge
+      
+      - name: Install pre-requisites
+        run: |
+          conda install -y -c conda-forge cvxopt
+          conda install -y -c conda-forge pygraphviz
 
       - name: Install Requirements
         run: |
