--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -9,13 +9,15 @@ on:
   push:
     branches:
       main
+
+
 jobs:
   sast:
     uses: SmartDCSITlimited/actions-store/.github/workflows/SAST.yml@main
   secret-detection:
     uses: SmartDCSITlimited/actions-store/.github/workflows/SecretDetection.yml@main
   python-linting:
-    uses: SmartDCSITlimited/actions-store/.github/workflows/PythonLinting.yml@main
+    uses: ./.github/workflows/PythonLinting.yml
 
   run-tests:
     runs-on: ubuntu-latest
@@ -49,15 +51,6 @@ jobs:
           conda install -y -c conda-forge cvxopt
           conda install -y -c conda-forge pygraphviz
 
-      - name: Install Requirements
-        run: |
-          pip install --upgrade pip
-
-          pip install pytest
-          pytest --version
-
-          pip install -r requirements.txt
-
       - name: Install Requirements (test-event-generator)
         run: |
           cd test-event-generator
@@ -77,6 +70,16 @@ jobs:
           pip install .
           cd ..
           rm -rf test-harness
+      
+      - name: Install Requirements
+        run: |
+          export PIP_CONSTRAINT='pip_constraint.txt'
+          pip install --upgrade pip
+
+          pip install pytest
+          pytest --version
+
+          pip install -r requirements.txt
 
       - name: Run Tests
         run: |
