CDSTP-126-Use-open-source-repos-instead-of-internal-repos (#103)
* CDSTP-126 - Update install_repositories script

* CDSTP-126 Update charon to erebus

* CDSTP-126 Update test-workflow to use install_repositories script

* CDSTP-126 add chmod +x to script

* CDSTP-126 update workflow

* CDSTP-126 test install_repositories script

* CDSTP-126 Use erebus main in install repos script

* CDSTP-126 Update workflow

* CDSTP-126 update python path

* CDSTP-126 rempve /tmp from install repos script for testing

* CDSTP-126 Include another cd.. in the workflow

* CDSTP-126 add pwd to debug

* CDSTP-126 Add init.py to tests

* CDSTP-126 Add init.py to tel2puml folder

* CDSTP-126 add an ls to debug

* CDSTP-126 Update workflow

* CDSTP-126 Making a change to test

* CDSTP-126 trying something else..

* CDSTP-126 Update

* CDSTP-126 Update workflow and script

* CDSTP-126 add init.py to tel2puml

* CDSTP-126 updating tests

* CDSTP-126 Printing python path

* CDSTP-126 explicitly set pythonpath

* CDSTP-126 trying something else

* CDSTP-126 Update workflow

* CDSTP-126 update install repos script

* CDSTP-126 update install repos script to use new release of erebus

* CDSTP-126 update comment

* CDSTP-126 still getting import errors

* CDSTP-126 Update workflow

* CDSTP-126 update workflow

* CDSTP-126 add pythonpath

* CDSTP-126 update workflow

* CDSTP-126 update install repos script to use new release of erebus

* CDSTP-126 test without explicit pythonpath

* CDSTP-126 add pythonpath back, as its required

* CDSTP-126 Fix repo name in script comments

--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -25,20 +25,6 @@ jobs:
       - name: Setup Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Checkout (test-event-generator)
-        uses: actions/checkout@v4
-        with:
-          repository: SmartDCSITlimited/test-event-generator
-          ssh-key: ${{ secrets.GH_CDS_TEST_EVENT_GENERATOR_GITHUB_WORKFLOW_KEY }}
-          path: test-event-generator
-
-      - name: Setup Checkout (test-harness)
-        uses: actions/checkout@v4
-        with:
-          repository: SmartDCSITlimited/test-harness
-          ssh-key: ${{ secrets.GH_CDS_TEST_HARNESS_GITHUB_WORKFLOW_KEY }}
-          path: test-harness
-
       - name: Setup-conda
         uses: s-weigand/setup-conda@v1
         with:
@@ -51,25 +37,12 @@ jobs:
           conda install -y -c conda-forge cvxopt
           conda install -y -c conda-forge pygraphviz
 
-      - name: Install Requirements (test-event-generator)
+      - name: Install janus and erebus as packages
         run: |
-          cd test-event-generator
-          git fetch --all --tags
-          git checkout tags/v1.0.1 -b latest
-          pip install -r requirements.txt
-          pip install .
-          cd ..
-          rm -rf test-event-generator
-
-      - name: Install Requirements (test-harness)
-        run: |
-          cd test-harness
-          git fetch --all --tags
-          git checkout tags/v1.1.3 -b latest
-          pip install -r requirements.txt
-          pip install .
-          cd ..
-          rm -rf test-harness
+          chmod +x ./scripts/install_repositories.sh && ./scripts/install_repositories.sh
+      
+      - name: Add GitHub workspace to PYTHONPATH
+        run: echo "PYTHONPATH=${GITHUB_WORKSPACE}" >> $GITHUB_ENV
       
       - name: Install Requirements
         run: |
@@ -83,5 +56,4 @@ jobs:
 
       - name: Run Tests
         run: |
-          export PYTHONPATH=/workspaces/test-harness:$PYTHONPATH
           pytest
