--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -13,9 +13,9 @@ on:
 
 jobs:
   sast:
-    uses: SmartDCSITlimited/actions-store/.github/workflows/SAST.yml@main
+    uses: xtuml/janus/.github/workflows/SAST.yml@main
   secret-detection:
-    uses: SmartDCSITlimited/actions-store/.github/workflows/SecretDetection.yml@main
+    uses: xtuml/janus/.github/workflows/SecretDetection.yml@main
   python-linting:
     uses: ./.github/workflows/PythonLinting.yml
 
