--- a/tel2puml/find_unique_graphs/config.yaml
+++ b/tel2puml/find_unique_graphs/config.yaml
@@ -2,18 +2,20 @@ data_sources:
   json:
     # Specify the file path to the JSON data
     dirpath: null
-    filepath: path/to/json/file
+    filepath: data.json
     # Define the field mapping from the application to your JSON structure
     field_mapping:
       job_name:
-        key_paths: [scope:name]
+        key_paths: [attributes::cloudProvider]
         value_type: string
       job_id:
-        key_paths: [trace_id]
+        key_paths: [trace_id, resource:attributes::key:other_key]
+        key_value: [null, test_string]
+        value_paths: [null, value:Value:StringValue]
         value_type: string
       event_type:
         key_paths: [attributes::key, attributes::key]
-        key_value: [http.method, http.status_code]
+        key_value: [coral.namespace, http.status_code]
         value_paths: [value:Value:StringValue, value:Value:IntValue]
         value_type: string
       event_id:
