Add ability to parse lists like child_span_ids

--- a/tel2puml/find_unique_graphs/config.yaml
+++ b/tel2puml/find_unique_graphs/config.yaml
@@ -46,7 +46,8 @@ data_sources:
         key_paths: [parent_span_id]
         value_type: string
       child_event_ids:
-        key_paths: []
+        key_paths: [child_span_ids]
+        value_type: string
 
 data_holders:
   sql:
