33 - devcontainer updated to use linux install with pre-requisites

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,55 +1,61 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Test Harness",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/anaconda:0.204.15-3",
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	"features": {
-		"ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
-			"packages": "default-jre"
-		}
-	},
-	"customizations": {
-		"vscode": {
-			"settings": {
-				"black-formatter.args": [
-					"--preview",
-					"--line-length",
-					"79"
-				],
-				"[python]": {
-					"editor.rulers": [
-						{
-							"column": 79
-						}
-					]
-				}
-			},
-			"extensions": [
-				"ms-python.black-formatter",
-				"ms-python.vscode-pylance",
-				"ms-python.python",
-				"GitHub.copilot-chat",
-				"GitHub.copilot"
-			]
-		}
-	},
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": {
-		"1": "conda install -y python=3.11.8 && conda install -y -c conda-forge cvxopt && conda install -y -c conda-forge pygraphviz && pip3 install --user -r requirements.txt && bash scripts/install_repositories.sh",
-		"2": "echo 'export PYTHONPATH=${containerWorkspaceFolder}:$PYTHONPATH' >> ~/.bashrc"
-	},
-	// Add repo to safe directories
-	"postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}",
-	// Configure tool-specific properties.
-	// "customizations": {},
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
-	"mounts": [
-		"source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
-		// "source=${localEnv:HOME}${localEnv:USERPROFILE}/.gitconfig,target=/home/vscode/.gitconfig,type=bind,consistency=cached"
-	]
+    "name": "Test Harness",
+    // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+    "image": "mcr.microsoft.com/devcontainers/python:3.11-bullseye",
+    // Features to add to the dev container. More info: https://containers.dev/features.
+    "features": {
+        "ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
+            "packages": [
+                "liblapack-dev",
+                "libopenblas-dev",
+                "libsuitesparse-dev",
+                "libglpk-dev",
+                "default-jre"
+            ]
+        }
+    },
+    "customizations": {
+        "vscode": {
+            "settings": {
+                "black-formatter.args": [
+                    "--preview",
+                    "--line-length",
+                    "79"
+                ],
+                "[python]": {
+                    "editor.rulers": [
+                        {
+                            "column": 79
+                        }
+                    ]
+                }
+            },
+            "extensions": [
+                "ms-python.black-formatter",
+                "ms-python.vscode-pylance",
+                "ms-python.python",
+                "GitHub.copilot-chat",
+                "GitHub.copilot"
+            ]
+        }
+    },
+    // Use 'forwardPorts' to make a list of ports inside the container available locally.
+    // "forwardPorts": [],
+    // Use 'postCreateCommand' to run commands after the container is created.
+    "postCreateCommand": {
+        "1": "export CPPFLAGS='-I/usr/include/suitesparse' && export CVXOPT_BUILD_GLPK=1 && pip install -r requirements.txt && bash scripts/install_repositories.sh",
+        "2": "echo 'export PYTHONPATH=${containerWorkspaceFolder}:$PYTHONPATH' >> ~/.bashrc"
+    },
+    // Add repo to safe directories
+    "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}",
+    // Configure tool-specific properties.
+    // "customizations": {},
+    // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+    // "remoteUser": "root",
+    "mounts": [
+        "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
+        // "source=${localEnv:HOME}${localEnv:USERPROFILE}/.gitconfig,target=/home/vscode/.gitconfig,type=bind,consistency=cached"
+    ]
 }
