--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -61,6 +61,9 @@ jobs:
   run-tests-check-no-anaconda-linux:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Checkout
+        uses: actions/checkout@v4
+      
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -97,6 +100,9 @@ jobs:
   run-tests-check-no-anaconda-mac-os:
     runs-on: macos-latest
     steps:
+      - name: Setup Checkout
+        uses: actions/checkout@v4
+      
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
