--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -48,11 +48,8 @@ jobs:
         run: |
           export PIP_CONSTRAINT='pip_constraint.txt'
           pip install --upgrade pip
-
-          pip install pytest
-          pytest --version
-
           pip install -r requirements.txt
+          pytest --version
 
       - name: Run Tests
         run: |
@@ -95,7 +92,7 @@ jobs:
 
       - name: Run Tests
         run: |
-          pytest ${GITHUB_WORKSPACE}/tests/end_to_end_tests
+          pytest
 
   run-tests-check-no-anaconda-mac-os:
     runs-on: macos-latest
@@ -125,4 +122,4 @@ jobs:
 
       - name: Run Tests
         run: |
-          pytest ${GITHUB_WORKSPACE}/tests/end_to_end_tests
+          pytest
