Update json data converter to be able to use the header within fields in OTelEvent

--- a/tel2puml/find_unique_graphs/config.yaml
+++ b/tel2puml/find_unique_graphs/config.yaml
@@ -16,7 +16,7 @@ data_sources:
         key_paths: [scope_spans::spans]
     field_mapping:
       job_name:
-        key_paths: [attributes::cloudProvider]
+        key_paths: [HEADER]
         value_type: string
       job_id:
         key_paths: [trace_id, resource:attributes::key:other_key]
