7 create jsondatasource class (#37)
* Add methods and tests to OTELDataSource for handling directory and files

* Update JSONDataSource to handle json file paths and directories

* Update tests for JSONDataSource

* Move get_file_list to the super class

* remove unecessary if name == main code for otel data source

* Update test docstrings

* Update design note and class diagrams

* Move methods from OTELDataSource ABC to JSONDataSource class

* Update tests

* update design ntoe and class diagrams

* cleanup docstrings

* Update variable name from file_ext to data_source

* update mypy errors

* Update conftest with docstrings

* Update requirements.txt with ijson

* update docstrings in conftest

* Update design note and class diagrams

* 7 Update otel data source in line with comments

* Add custom json data converter to defined schema

* Add recursive search if directory specified

* Update docstring within parse_json_stream method

* Fix mypy errors

* Remove schema from config file

* Add caching of previously visited results

* Add ability to extract headers and spans from json

* Update typeddicts, variable names and docstrings

* Update JSONDataSource to handle lists as well as dicts within json data

* Update tests

* Add ability to parse lists like child_span_ids

* Update end to end json parser tests

* Fix mypy errors

* Update tests for move coverage of JSONDataSource

* Update test docstring

* Testing GH workflow

* Update json data converter to be able to use the header within fields in OTelEvent

* Fix linting error

* Split process header into smaller functions, fix mypy errors

* Update docstrings

* Update docstring

* Update linting

* Update docstrings in otel data source

* Update design note and remove unnecessary attribute in otel data source

* Update data model and tests

* Fix linting

--- a/tel2puml/find_unique_graphs/config.yaml
+++ b/tel2puml/find_unique_graphs/config.yaml
@@ -1,6 +1,49 @@
 data_sources:
   json:
-    path: /path/to/your/json/directory/or/file
+    # Specify the file path to the JSON data
+    dirpath: null
+    filepath: data.json
+    # Define the field mapping from the application to your JSON structure
+    data_location: resource_spans
+    header:
+      paths: [resource:attributes, scope_spans::scope:name, testhere] 
+    span_mapping:
+      spans:
+        key_paths: [scope_spans::spans]
+    field_mapping:
+      job_name:
+        key_paths: [HEADER:resource:attributes::key, HEADER:scope_spans::scope:name]
+        key_value: [service.name, null]
+        value_paths: [value:Value:StringValue, null]
+        value_type: string
+      job_id:
+        key_paths: [HEADER:testhere]
+        value_type: string
+      event_type:
+        key_paths: [attributes::key, attributes::key]
+        key_value: [coral.namespace, http.status_code]
+        value_paths: [value:Value:StringValue, value:Value:IntValue]
+        value_type: string
+      event_id:
+        key_paths: [span_id]
+        value_type: string
+      start_timestamp:
+        key_paths: [start_time_unix_nano]
+        value_type: unix_nano
+      end_timestamp:
+        key_paths: [end_time_unix_nano]
+        value_type: unix_nano
+      application_name:
+        key_paths: [attributes::key, resource:attributes::key]
+        key_value: [coral.service, service.version]
+        value_paths: [value:Value:StringValue, value:Value:StringValue]
+        value_type: string
+      parent_event_id:
+        key_paths: [parent_span_id]
+        value_type: string
+      child_event_ids:
+        key_paths: [child_span_ids]
+        value_type: string
 
 data_holders:
   sql:
