107 - Fix mypy erros with plugin

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,4 +1,4 @@
 [mypy]
-plugins = sqlalchemy.ext.mypy.plugin
+plugins = sqlalchemy.ext.mypy.plugin, pydantic.mypy
 disable_error_code = import-untyped
 exclude = proof_of_concepts
