Add ingest data and stream from data holder to puml

--- a/tel2puml/otel_to_pv/config.yaml
+++ b/tel2puml/otel_to_pv/config.yaml
@@ -4,7 +4,7 @@ ingest_data:
 
 data_holders:
   sql:
-    db_uri: 'sqlite:///:memory:'
+    db_uri: 'sqlite:///otel_db.db'
     batch_size: 5
     time_buffer: 30
 
