146 update readme with up to date usage of jsondatasource config (#148)
* 146 - move JSON data converter to appropriate folder

* 146 - Update json_data_conversion config

* 146 - Add README for config file usage

* 146 - update sequencer README

* 146 - update sequencer README

* 146  - Update sequencer howto

* 146 - move images to another file

* 146 - update config readme to use refernce to sequencer howto

* 146 - remove unused fields and add sequencer

* 146 - update template config to more recent

* 146 - Update after review comments

--- a/tel2puml/otel_to_pv/config.yaml
+++ b/tel2puml/otel_to_pv/config.yaml
@@ -4,58 +4,50 @@ ingest_data:
 
 data_holders:
   sql:
-    db_uri: 'sqlite:///otel_db.db'
+    db_uri: "sqlite:///:memory:"
     batch_size: 5
     time_buffer: 30
 
 data_sources:
   json:
-    dirpath: 
-    filepath: data.json
-    data_location: resource_spans
-    header:
-      paths: [resource:attributes, scope_spans::scope:name]
-    span_mapping:
-      spans:
-        key_paths: [scope_spans::spans]
+    dirpath: dir/path/to/json/files
+    filepath: null 
     field_mapping:
       job_name:
-        key_paths: [HEADER:resource:attributes::key,
-        HEADER:scope_spans::scope:name]
-        key_value: [service.name, null]
-        value_paths: [value:Value:StringValue, null]
+        key_paths:
+          ["resource_spans.[].resource.attributes.[].key"]
+        key_value: [service.name]
+        value_paths: ["value.Value.StringValue"]
         value_type: string
       job_id:
-        key_paths: [job_id]
+        key_paths: ["resource_spans.[].scope_spans.[].spans.[].trace_id"]
         value_type: string
       event_type:
-        key_paths: [attributes::key, attributes::key]
-        key_value: [coral.namespace, http.status_code]
-        value_paths: [
-        value:Value:StringValue,
-        value:Value:IntValue]
+        key_paths: [
+          [
+            "resource_spans.[].scope_spans.[].spans.[].attributes.[].key",
+            "resource_spans.[].scope_spans.[].spans.[].name"
+          ],
+          [
+            "resource_spans.[].scope_spans.[].spans.[].attributes.[].key",
+            "resource_spans.[].scope_spans.[].spans.[].kind"
+          ],
+        ]
+        key_value: [[coral.operation, null], [http.status_code, null]]
+        value_paths: [[value:Value:StringValue, null], [value:Value:IntValue, null]]
         value_type: string
       event_id:
         key_paths: [span_id]
         value_type: string
       start_timestamp:
         key_paths: [start_time_unix_nano]
-        value_type: unix_nano
+        value_type: string
       end_timestamp:
         key_paths: [end_time_unix_nano]
-        value_type: unix_nano
+        value_type: string
       application_name:
-        key_paths: [
-        attributes::key,
-        HEADER:resource:attributes::key]
-        key_value: [coral.service, service.version]
-        value_paths: [
-        value:Value:StringValue,
-        value:Value:StringValue]
+        key_paths: ["resource_spans.[].scope_spans.[].scope.name"]
         value_type: string
       parent_event_id:
         key_paths: [parent_span_id]
-        value_type: string
-      child_event_ids:
-        key_paths: [child_span_ids]
         value_type: string
