--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -37,7 +37,7 @@ jobs:
           conda install -y -c conda-forge cvxopt
           conda install -y -c conda-forge pygraphviz
 
-      - name: Install janus and erebus as packages
+      - name: Install janus as package
         run: |
           chmod +x ./scripts/install_repositories.sh && ./scripts/install_repositories.sh
       
@@ -74,7 +74,7 @@ jobs:
           sudo apt install -y libsuitesparse-dev
           sudo apt install -y libsuitesparse-dev
 
-      - name: Install janus and erebus as packages
+      - name: Install janus as package
         run: |
           chmod +x ./scripts/install_repositories.sh && ./scripts/install_repositories.sh
       
@@ -106,7 +106,7 @@ jobs:
           python-version: '3.11.9'
           cache: 'pip'
 
-      - name: Install janus and erebus as packages
+      - name: Install janus as package
         run: |
           chmod +x ./scripts/install_repositories.sh && ./scripts/install_repositories.sh
       
