--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,9 +1,10 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Image and Zipapp Archive
 on:
     workflow_dispatch:
     push:
       branches:
         - 'main'
+        - '186-create-executable-python-zip-archive-using-zipapp had recent pushes'
       tags:
         - 'v*'
 
@@ -37,3 +38,55 @@ jobs:
             push: true
             tags: ${{ steps.meta.outputs.tags }}
             labels: ${{ steps.meta.outputs.labels }}
+
+  zipapp-amd-build-and-push:
+    if: |
+      github.repository == 'xtuml/otel2puml'
+          && github.actor != 'dependabot[bot]'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Create tel2puml-amd.pyz
+        run: python -m zipapp tel2puml-amd
+      
+      - name: Upload to GitHub Releases
+        uses: actions/upload-release-asset@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./tel2puml-amd.pyz
+          asset_name: tel2puml-amd.pyz
+          asset_content_type: application/zip
+
+  zipapp-arm-build-and-push:
+    if: |
+      github.repository == 'xtuml/otel2puml'
+          && github.actor != 'dependabot[bot]'
+    runs-on: macos-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Create tel2puml-arm.pyz
+        run: python -m zipapp tel2puml-arm
+      
+      - name: Upload to GitHub Releases
+        uses: actions/upload-release-asset@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./tel2puml-arm.pyz
+          asset_name: tel2puml-arm.pyz
+          asset_content_type: application/zip
